css/style.css
/* ... */
#mobile-menu-popup-nav {
    height: 60dvh;
    padding-top: 5dvh;
}

#mobile-menu-popup-nav ol {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    height: 100%;
    list-style-position: inside;


}

#mobile-menu-popup-nav ol li {
    font-size: 1.25rem;
}

.close-menu {
    position: absolute;
    cursor: pointer;
    width: 35px;
    right: 25px;
    top: 30px;
}




.nav-links a:hover::after {
    width: var(--underline-width-hover);
}


.nav-links a:active {
    font-weight: 900;
}

.nav-links a:active::after {
    font-weight: 900;

}


.nav-links a {
    position: relative;
    transition: font-weight 0.3s;

}

.nav-links a::after {
    content: "";
    position: absolute;
    display: inline-block;
    left: 0;
    bottom: 0;
    width: 0px;
    height: 2px;
    background-color: white;
    transition: width 0.3s, font-weight 0.3s;
}





@keyframes nav-slide-out {
    from {
        right: -100px;
        opacity: 0;
    }

    to {
        right: 0px;
        opacity: 1;
    }
}

@keyframes nav-slide-back {
    from {
        right: 0px;
        opacity: 1;
    }

    to {
        right: -200px;
        opacity: 0;
    }
}

#hamburger-icon {
    opacity: 0;
}



/* Styles for screen sizes larger than mobile */

@media (min-width:768px) {

    /* tablets */
    #intro {
        min-height: 80dvh;
    }

    .card {
        margin-bottom: 60px;
    }


    .project-card {
        width: 80%;
        margin-bottom: 100px;
    }

    .project-row {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    main {
        padding: 0px 100px;
    }

    #skills-header {
        font-size: 1.75rem;
    }



}

@media (min-width:1024px) {

    /* laptops */

    main {
        padding: 0px 150px;
    }

    #hamburger-icon {
        display: none;
    }

    #desktop-nav {
        display: block;
        /* width 700px */
        width: clamp(720px, 55vw, 800px);

    }

    #github-li {
        list-style-type: none;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        position: fixed;
        bottom: 15px;
        left: 45px;
        opacity: 0;
    }

    #github-li a:active {
        filter: brightness(200%);
    }

    #social-icons {
        display: block;


    }

    #email {
        position: fixed;
        bottom: 15px;
        right: 45px;
        width: 65px;
        opacity: 0;
    }

    #email:hover {
        rotate: 8deg;
    }

    #intro {
        min-height: 100dvh;
        padding-left: 8vw;
    }

    #intro-slashes {
        display: flex;
        flex-direction: column;
        align-items: end;
        position: fixed;
        bottom: 35px;
        right: 0;


    }

    .intro-slash {
        background-color: var(--white);
        margin-top: 15px;
        border: 2px solid var(--white);
        /* border-radius: 0px 60px 0px 60px; */
        transform: skewX(55deg);
        height: 15px;
        width: 250px;
    }

    #slash-width {

        width: 210px;
    }


    #hand-wave {
        display: block;
        position: absolute;
        width: 55px;
        bottom: 15px;
        right: 45px;
    }

    #about-content {
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: center;

    }



    .browser-tab {
        padding: 15px;
        background-color: var(--shadow-grey-dark);
    }


    #polaroid {
        margin-right: 50px;
    }



    .sharp-edge {

        width: 65%;

    }

    #shorter-edge {
        width: 45%;
    }



    #about-section p {
        font-size: 1.25rem;
    }

    #about-section h1 {
        font-size: 2.2rem;
    }

    #large-img {
        width: 275px;
    }


    .browser {
        max-width: 50%;
        margin-left: 50px;
    }

    .card .browser {
        display: none;
    }


    .project-card {
        width: 55%;
        margin-left: 50px;
        margin-bottom: 0px;
    }

    #hide-screenshot-desktop {
        display: none;
    }



    #hide-screenshot-mobile {
        display: inline;
        width: 55%;
        margin-right: 50px;

    }

    .fit-screenshot {
        width: 55%;
    }

    #card-left {
        margin-right: 50px;
        margin-left: 0px;
    }


    .project-row {
        display: flex;
        flex-direction: row;
        padding: 20px;
        justify-content: center;
        align-items: center;
        margin-bottom: 100px;

    }

    .row-reverse {

        flex-direction: row-reverse;

    }

    .desktop-browser {
        display: flex;
        flex-direction: column;
        width: 55%;
        margin-right: 50px;
    }

    .middle-project {
        margin-right: 0px;
        margin-left: 50px;
    }




    .skills-container {
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        justify-content: center;
        align-items: center;
    }

    #footer-socials {
        display: none;
    }

    #footer {
        padding-top: 5dvh;
    }

    .inspiration {
        width: 50%;
    }




}

/* Really large desktops (16 inch +) */

@media (min-width:1450px) {
    #intro {
        padding-left: 0vw;
    }


}

